# text-compressor

./: .clang-format  .gitignore  README.md  development.sh  meson.build
profiler-data/: compression.gprof  decompression.gprof
src/: bitmanip.hpp  block_archiver.cpp  block_archiver.hpp  file_format.hpp  huffman.cpp  huffman.hpp  main.cpp  symbol.hpp
tests/: test_bit_manipulation.cpp  test_huffman_code.cpp  test_huffman_code_generation.cpp  test_huffman_tree_generation.cpp
